# adventofcode2023

./: .gitignore  Cargo.toml
day01/: ex1.rs  ex2.rs
day02/: ex1.rs  ex2.rs
day03/: ex1.rs  ex2.rs
day04/: ex1.rs  ex2.rs
day05/: ex1.rs  ex2.rs
day06/: ex1.rs  ex2.rs
day07/: ex1.rs  ex2.rs
day08/: ex1.rs  ex2.rs
