bin = [
  { name = "day01-1", path = "day01/ex1.rs" },
  { name = "day01-2", path = "day01/ex2.rs" },
  { name = "day02-1", path = "day02/ex1.rs" },
  { name = "day02-2", path = "day02/ex2.rs" },
  { name = "day03-1", path = "day03/ex1.rs" },
  { name = "day03-2", path = "day03/ex2.rs" },
  { name = "day04-1", path = "day04/ex1.rs" },
  { name = "day04-2", path = "day04/ex2.rs" },
]

[package]
name = "adventofcode2023"
edition = "2021"
publish = false
