bin = [
  { name = "day01-1", path = "day01/ex1.rs" },
  { name = "day01-2", path = "day01/ex2.rs" },
  { name = "day02-1", path = "day02/ex1.rs" },
  { name = "day02-2", path = "day02/ex2.rs" },
  { name = "day03-1", path = "day03/ex1.rs" },
  { name = "day03-2", path = "day03/ex2.rs" },
  { name = "day04-1", path = "day04/ex1.rs" },
  { name = "day04-2", path = "day04/ex2.rs" },
  { name = "day05-1", path = "day05/ex1.rs" },
  { name = "day05-2", path = "day05/ex2.rs" },
  { name = "day06-1", path = "day06/ex1.rs" },
  { name = "day06-2", path = "day06/ex2.rs" },
  { name = "day07-1", path = "day07/ex1.rs" },
  { name = "day07-2", path = "day07/ex2.rs" },
  { name = "day08-1", path = "day08/ex1.rs" },
  { name = "day08-2", path = "day08/ex2.rs" },
]

[package]
name = "adventofcode2023"
edition = "2021"
publish = false
